--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -1,11 +1,81 @@
-//подключение шрифтов
-
-// @font-face {
-//     font-family: "Oswald";
-//     font-weight: 400;
-//     font-style: normal;
-//     font-display: swap;
-//     src:
-//         url("../fonts/oswaldregular.woff2") format("woff2"),
-//         url("../fonts/oswaldregular.woff") format("woff");
-// }
+@font-face {
+    font-family: 'Staatliches-Regular';
+    src:
+        url('../../fonts/Staatliches-Regular.woff2') format('woff2'),
+        url('../../fonts/Staatliches-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+@font-face {
+    font-family: 'Barlow-Regular';
+    src:
+        url('../../fonts/Barlow-Regular.woff2') format('woff2'),
+        url('../../fonts/Barlow-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+@font-face {
+    font-family: 'Barlow-SemiBold';
+    src:
+        url('../../fonts/Barlow-SemiBold.woff2') format('woff2'),
+        url('../../fonts/Barlow-SemiBold.woff') format('woff');
+    font-weight: 600;
+    font-style: normal;
+    font-display: swap;
+}
+@font-face {
+    font-family: 'Barlow-Bold';
+    src:
+        url('../../fonts/Barlow-Bold.woff2') format('woff2'),
+        url('../../fonts/Barlow-Bold.woff') format('woff');
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+}
+@font-face {
+    font-family: 'Barlow-Light';
+    src:
+        url('../../fonts/Barlow-Light.woff2') format('woff2'),
+        url('../../fonts/Barlow-Light.woff') format('woff');
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+}
+@font-face {
+    font-family: 'SFProDisplay-Bold', 'Arial', sans-serif;
+    src:
+        url('../../fonts/SFProDisplay-Bold.woff2') format('woff2'),
+        url('../../fonts/SFProDisplay-Bold.woff') format('woff');
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+}
+@font-face {
+    font-family: 'SFProDisplay-Medium', 'Arial', sans-serif;
+    src:
+        url('../../fonts/SFProDisplay-Medium.woff2') format('woff2'),
+        url('../../fonts/SFProDisplay-Medium.woff') format('woff');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+}
+@font-face {
+    font-family: 'SFProDisplay-Regular', 'Arial', sans-serif;
+    src:
+        url('../../fonts/SFProDisplay-Regular.woff2') format('woff2'),
+        url('../../fonts/SFProDisplay-Regular.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+@font-face {
+    font-family: 'SFProDisplay-Semibold';
+    src:
+        url('../../fonts/SFProDisplay-Semibold.woff2') format('woff2'),
+        url('../../fonts/SFProDisplay-Semibold.woff') format('woff');
+    font-weight: 600;
+    font-style: normal;
+    font-display: swap;
+}
