--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,8 +1,11 @@
 // Colors
-//переменные для цветов
 
-// $basic-white: #ffffff;
-// $basic-green: #68b738;
+$basic-text: #2F3035;
+$basic-gray: #656464;
+$light-text: #C4C4C4;
+$medium-text: #48494D;
+$basic-blue: #1C62CD;
+$light: #F0F0F4;
 
 // Viewports
 //устанавливаю брэкпоинты
