Реализованы блоки с популярными товарами и категориями

--- a/source/sass/blocks/banner.scss
+++ b/source/sass/blocks/banner.scss
@@ -9,7 +9,8 @@
     min-width: 400px;
     object-fit: cover;
 }
-.banner-section__slider-btn {
+.banner-section__slider-btn,
+.product-slider__slider-btn {
     position: absolute;
     top: 50%;
     margin: 0;
