--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,3 +13,5 @@
 @import "blocks/header.scss";
 @import "blocks/banner.scss";
 @import "blocks/search.scss";
+@import "blocks/categories.scss";
+@import "blocks/products.scss";
