--- a/source/sass/blocks/search.scss
+++ b/source/sass/blocks/search.scss
@@ -4,16 +4,16 @@
 .search__tabs-item {
     padding: 11px 26px 12px;
 }
-.search__tabs-item--active {
+.search__tabs-item.tab--active {
     font-family: 'SFProDisplay-Bold', 'Arial', sans-serif;
     font-weight: 700;
     border-radius: 5px;
     background-color: $light;
 }
-.search__content-item {
+.tabs-content {
     display: none;
 }
-.search__content-item--active {
+.tabs-content.tabs-content--active {
     display: block;
 }
 .search__content-form {
