--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -3,6 +3,7 @@
 $basic-text: #2F3035;
 $basic-gray: #656464;
 $light-text: #C4C4C4;
+$border: #CDCDCD;
 $medium-text: #48494D;
 $basic-blue: #1C62CD;
 $light: #F0F0F4;
