--- a/source/sass/blocks/banner.scss
+++ b/source/sass/blocks/banner.scss
@@ -1,3 +1,4 @@
+//first banner
 .banner-section__inner {
     display: flex;
     justify-content: space-between;
@@ -144,4 +145,9 @@
     font-size: 18px;
     line-height: 22px;
     color: $basic-blue;
+}
+
+//second banner
+.banner {
+    margin-bottom: 80px;
 }
