--- a/source/sass/blocks/banner.scss
+++ b/source/sass/blocks/banner.scss
@@ -1,14 +1,22 @@
 //first banner
-.banner-section__inner {
-    display: flex;
-    justify-content: space-between;
-}
-.banner-section__slider {
-    max-width: 870px;
-}
-.bunner-section__slider-img {
-    min-width: 400px;
-    object-fit: cover;
+.banner-section {
+    &__inner {
+        display: flex;
+        justify-content: space-between;
+    }
+    &__slider {
+        max-width: 870px;
+        &-img {
+            min-width: 400px;
+            object-fit: cover;
+        }
+        &-btn-prev {
+            left: 20px;
+        }
+        &-btn-next {
+            right: 5px;
+        }
+    }
 }
 .banner-section__slider-btn,
 .product-slider__slider-btn {
@@ -22,129 +30,126 @@
     z-index: 5;
     cursor: pointer;
 }
-.banner-section__slider-btn-prev {
-    left: 20px;
-}
-.banner-section__slider-btn-next {
-    right: 5px;
-}
-.slick-arrow {
-    padding: 15px;
-}
-.slick-dots {
-    position: absolute;
-    bottom: 40px;
-    left: 0;
-    right: 0;
-    text-align: center;
-}
-.slick-dots li {
-    display: inline-block;
-    padding: 0 5px;
-}
-.slick-dots button {
-    margin: 0;
-    padding: 0;
-    font-size: 0;
-    width: 11px;
-    height: 11px;
-    border: 1px solid #fff;
-    border-radius: 50%;
-    background-color: transparent;
-}
-.slick-active button {
-    background-color: #fff;
+.slick {
+    &-arrow {
+        padding: 15px;
+    }
+    &-dots {
+        position: absolute;
+        bottom: 40px;
+        left: 0;
+        right: 0;
+        text-align: center;
+        & li {
+            display: inline-block;
+            padding: 0 5px;
+        }
+        & button {
+            margin: 0;
+            padding: 0;
+            font-size: 0;
+            width: 11px;
+            height: 11px;
+            border: 1px solid #fff;
+            border-radius: 50%;
+            background-color: transparent;
+        }
+    }
+    &-active button {
+        background-color: #fff;
+    }
 }
 .sale-item {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    max-width: 265px;
+    min-width: 265px;
     text-align: center;
     border: 1px solid #CDCDCD;
     border-radius: 3px;
-}
-.sale-item__top {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-}
-.sale-item__info {
-    padding: 8px 20px;
-    text-transform: uppercase;
-    font-size: 12px;
-    line-height: 15px;
-    letter-spacing: 0.1em;
-    color: #fff;
-    background-color: $basic-blue;
+    &__top {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+    }
+    &__info {
+        padding: 8px 20px;
+        text-transform: uppercase;
+        font-size: 12px;
+        line-height: 15px;
+        letter-spacing: 0.1em;
+        color: #fff;
+        background-color: $basic-blue;
+    }
+    &__price {
+        position: relative;
+        text-align: right;
+        &-new {
+            margin-right: 6px;
+            padding-right: 20px;
+            font-weight: 700;
+            font-size: 27px;
+            line-height: 32px;
+            color: $basic-blue;
+        }
+        &::after {
+            position: absolute;
+            content: "";
+            background-image: url("../../img/currency-icon.svg");
+            width: 15px;
+            height: 18px;
+            right: 0;
+            top: 6px;
+        }
+        &-old {
+            display: inline-block;
+            margin-right: 15px;
+            padding: 2px 5px;
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 17px;
+            color: $light-text;
+            background-image: url("../../img/old-line.svg");
+            background-repeat: no-repeat;
+            &::after {
+                position: absolute;
+                content: "";
+                background-image: url("../../img/currence-old-icon.svg");
+                width: 8px;
+                height: 10px;
+                top: 3px;
+                right: -10px;
+            }
+        }
+    }
+    &__img {
+        object-fit: contain;
+    }
+    &__title {
+        margin-bottom: 7px;
+        font-size: 21px;
+        line-height: 18px;
+        font-weight: 700;
+        font-family: 'SFProDisplay-Bold', 'Arial', sans-serif;
+    }
+    &__footer {
+        padding: 25px 20px;
+        font-size: 18px;
+        line-height: 21px;
+        background-color: $light;
+        & span {
+            display: block;
+            font-family: 'Barlow-Bold';
+            font-weight: 700;
+            font-size: 18px;
+            line-height: 22px;
+            color: $basic-blue;
+        }
+    }
 }
 .price {
     position: relative;
     font-family: "Barlow", "Arial", sans-serif;
-}
-.sale-item__price {
-    text-align: right;
-}
-.sale-item__price-new {
-    margin-right: 6px;
-    padding-right: 20px;
-    font-weight: 700;
-    font-size: 27px;
-    line-height: 32px;
-    color: $basic-blue;
-}
-.sale-item__price-new::after {
-    position: absolute;
-    content: "";
-    background-image: url("../../img/currency-icon.svg");
-    width: 15px;
-    height: 18px;
-    right: 0;
-    top: 6px;
-}
-.sale-item__price-old {
-    display: inline-block;
-    margin-right: 15px;
-    padding: 2px 5px;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 17px;
-    color: $light-text;
-    background-image: url("../../img/old-line.svg");
-    background-repeat: no-repeat;
-}
-.sale-item__price-old::after {
-    position: absolute;
-    content: "";
-    background-image: url("../../img/currence-old-icon.svg");
-    width: 8px;
-    height: 10px;
-    top: 3px;
-    right: -10px;
-}
-.sale-item__img {
-    object-fit: contain;
-}
-.sale-item__title {
-    margin-bottom: 7px;
-    font-size: 21px;
-    line-height: 18px;
-    font-weight: 700;
-    font-family: 'SFProDisplay-Bold', 'Arial', sans-serif;
-}
-.sale-item__footer {
-    padding: 25px 20px;
-    font-size: 18px;
-    line-height: 21px;
-    background-color: $light;
-}
-.sale-item__footer span {
-    display: block;
-    font-family: 'Barlow-Bold';
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 22px;
-    color: $basic-blue;
 }
 
 //second banner
