--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -16,3 +16,4 @@
 @import "blocks/categories.scss";
 @import "blocks/products.scss";
 @import "blocks/footer.scss";
+@import "blocks/breadcrumbs.scss";
