--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -17,3 +17,5 @@
 @import "blocks/products.scss";
 @import "blocks/footer.scss";
 @import "blocks/breadcrumbs.scss";
+@import "blocks/catalog.scss";
+@import "blocks/pagination.scss";
