Подключены плагины для стилизации формы с фильтрацией, оформлен первый блок в этой форме

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,3 +1,10 @@
+// Plugins
+
+@import "plugins/ion.rangeSlider.min.scss";
+@import "plugins/jquery.formstyler.scss";
+@import "plugins/jquery.formstyler.theme.scss";
+@import "plugins/jquery.rateyo.min.scss";
+
 // Global
 
 @import "global/variables.scss";
@@ -19,3 +26,4 @@
 @import "blocks/breadcrumbs.scss";
 @import "blocks/catalog.scss";
 @import "blocks/pagination.scss";
+@import "blocks/aside-filter.scss";
