--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -71,7 +71,7 @@
     font-display: swap;
 }
 @font-face {
-    font-family: 'SFProDisplay-Semibold';
+    font-family: 'SFProDisplay-Semibold', 'Arial', sans-serif;
     src:
         url('../../fonts/SFProDisplay-Semibold.woff2') format('woff2'),
         url('../../fonts/SFProDisplay-Semibold.woff') format('woff');
