--- a/source/sass/blocks/aside-filter.scss
+++ b/source/sass/blocks/aside-filter.scss
@@ -35,6 +35,8 @@
     }
     &__content {
         display: flex;
+        flex-wrap: wrap;
+        margin-top: 20px;
         &-box {
             width: 50%;
         }
@@ -48,7 +50,6 @@
 }
 .filter__item-drop {
     position: relative;
-    margin-bottom: 20px;
     cursor: pointer;
     &::before {
         position: absolute;
@@ -65,4 +66,97 @@
             transform: rotate(180deg);
         }
     }
+}
+.jq-checkbox, .jq-radio {
+    margin-right: 8px;
+    background: #fff;
+    width: 14px;
+    height: 14px;
+    vertical-align: -1px;
+    border: 1px solid $light-text;
+    border-radius: 1px;
+    box-shadow: none;
+}
+.jq-checkbox.checked, .jq-radio.checked {
+    background: $basic-blue;
+    border: none;
+}
+.jq-checkbox.checked .jq-checkbox__div {
+    width: 8px;
+    height: 6px;
+    margin: 4px 0 0 3px;
+    background-image: url("../../img/checked.svg");
+    border-bottom: none;
+    border-left: none;
+    transform: rotate(0);
+}
+.jq-radio.checked .jq-radio__div {
+    width: 0;
+    height: 0;
+    margin: 0;
+    border-radius: 0;
+    background: transparent;
+    box-shadow: none;
+}
+.aside-filter__content.aside-filter__content-radio {
+    flex-wrap: nowrap;
+}
+//range
+.irs--flat {
+    width: 100%;
+    margin-top: -15px;
+}
+.irs-from {
+    display: none;
+}
+.irs--flat .irs-from, .irs--flat .irs-single, .irs--flat .irs-to {
+    display: none;
+}
+.irs--flat .irs-max, .irs--flat .irs-min {
+    top: 55px;
+    padding: 0;
+    padding-left: 27px;
+    color: $basic-text;
+    font-size: 14px;
+    line-height: 17px;
+    font-family: 'Barlow-Regular', 'Arial', sans-serif;
+    text-decoration-line: underline;
+    background-color: transparent;
+    border-radius: 0;
+    visibility: visible !important;
+}
+.irs-min::before, .irs-max::before {
+    position: absolute;
+    left: 0;
+    font-size: 14px;
+    line-height: 17px;
+    color: $light-text;
+    text-decoration: none;
+}
+.irs-min::before {
+    content: "от";
+}
+.irs-max::before {
+    content: "до";
+}
+.irs--flat .irs-line {
+    top: 25px;
+    height: 1px;
+    background-color: $range;
+    border-radius: 0px;
+}
+.irs--flat .irs-bar {
+    top: 25px;
+    height: 3px;
+    background-color: $basic-blue;
+}
+.irs--flat .irs-handle {
+    top: 22px;
+    width: 8px;
+    height: 8px;
+    background-color: $basic-blue;
+    border-radius: 50%;
+}
+.irs--flat .irs-handle>i:first-child, .irs--flat .irs-handle.state_hover>i:first-child, .irs--flat .irs-handle:hover>i:first-child {
+    background-color: transparent;
 }
