--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -7,6 +7,7 @@ $border: #CDCDCD;
 $medium-text: #48494D;
 $basic-blue: #1C62CD;
 $light: #F0F0F4;
+$range: #E0E0E0;
 
 // Viewports
 //устанавливаю брэкпоинты
