--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -8,7 +8,7 @@
     font-display: swap;
 }
 @font-face {
-    font-family: 'Barlow-Regular';
+    font-family: 'Barlow-Regular', 'Arial', sans-serif;
     src:
         url('../../fonts/Barlow-Regular.woff2') format('woff2'),
         url('../../fonts/Barlow-Regular.woff') format('woff');
