--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -8,6 +8,7 @@ $medium-text: #48494D;
 $basic-blue: #1C62CD;
 $light: #F0F0F4;
 $range: #E0E0E0;
+$placeholder: #BDBEC2;
 
 // Viewports
 //устанавливаю брэкпоинты
