--- a/source/sass/blocks/aside-filter.scss
+++ b/source/sass/blocks/aside-filter.scss
@@ -36,9 +36,10 @@
     &__content {
         display: flex;
         flex-wrap: wrap;
-        margin-top: 20px;
+        margin-top: 10px;
         &-box {
             width: 50%;
+            margin-bottom: 10px;
         }
     }
     &__form {
@@ -46,6 +47,111 @@
             font-size: 14px;
             line-height: 17px;
         }
+    }
+    &__item-list {
+        margin: 46px 0 40px;
+    }
+}
+.filter {
+    &__item-list {
+        display: flex;
+        justify-content: space-between;
+        padding-top: 34px;
+        border-bottom: 2px solid #cdcdcd;
+        &-title {
+            padding-bottom: 14px;
+            padding-left: 26px;
+            font-family: 'SFProDisplay-Semibold', 'Arial', sans-serif;
+            font-weight: 600;
+            font-size: 16px;
+            line-height: 19px;
+        }
+        &-select {
+            font-family: 'Barlow-Regular', 'Arial', sans-serif;
+            font-size: 14px;
+            line-height: 17px;
+            color: $medium-text;
+        }
+    }
+    &-more {
+        width: 100%;
+        &__btn {
+            padding: 0;
+            font-size: 14px;
+            line-height: 17px;
+            color: $basic-blue;
+            background-color: transparent;
+            border: none;
+            border-bottom: 1px solid $basic-blue;
+        }
+    }
+    &-search {
+        margin-top: 10px;
+        margin-bottom: 20px;
+        padding: 0 20px;
+        width: 100%;
+        height: 30px;
+        border: 1px solid $range;
+        font-size: 12px;
+        line-height: 14px;
+        &::placeholder {
+            color: $placeholder;
+        }
+    }
+}
+.jq-selectbox {
+    &__select {
+        height: 20px;
+        padding: 0 25px 0 10px;
+        border-radius: 0;
+        background: transparent;
+        box-shadow: none;
+        text-shadow: none;
+        font-family: 'Barlow-Regular', 'Arial', sans-serif;
+        font-size: 14px;
+        line-height: 17px;
+        color: $medium-text;
+        border: none;
+        &:hover, &:active {
+            background: transparent;
+            box-shadow: none;
+        }
+    }
+    &__trigger {
+        background-image: url("../../img/arrow-down.svg");
+        bottom: 5px;
+        top: 6px;
+        right: 9px;
+        width: 12px;
+        height: 8px;
+        border-left: none;
+        &-arrow {
+            position: absolute;
+            top: 14px;
+            right: 12px;
+            width: 0;
+            height: 0;
+            border: none;
+        }
+    }
+    & li {
+        color: rgba(0, 0, 0, 0.6);
+        &.selected {
+            background: rgba(107, 126, 172, 0.05);
+            color: rgba(0, 0, 0, 0.6);
+        }
+        &:hover {
+            background: rgba(107, 126, 172, 0.05);
+            color: rgba(0, 0, 0, 0.6);
+        }
+    }
+    &__dropdown {
+        border-radius: 0;
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    &.focused .jq-selectbox__select {
+        border: none;
     }
 }
 .filter__item-drop {
@@ -105,25 +211,46 @@
 .irs--flat {
     width: 100%;
     margin-top: -15px;
+    & .irs-from, & .irs-single, & .irs-to {
+        display: none;
+    }
+    & .irs-max, & .irs-min {
+        top: 55px;
+        padding: 0;
+        padding-left: 27px;
+        color: $basic-text;
+        font-size: 14px;
+        line-height: 17px;
+        font-family: 'Barlow-Regular', 'Arial', sans-serif;
+        text-decoration-line: underline;
+        background-color: transparent;
+        border-radius: 0;
+        visibility: visible !important;
+    }
+    & .irs-line {
+        top: 25px;
+        height: 1px;
+        background-color: $range;
+        border-radius: 0px;
+    }
+    & .irs-bar {
+        top: 25px;
+        height: 3px;
+        background-color: $basic-blue;
+    }
+    & .irs-handle {
+        top: 22px;
+        width: 8px;
+        height: 8px;
+        background-color: $basic-blue;
+        border-radius: 50%;
+        &>i:first-child, &.state_hover>i:first-child, &:hover>i:first-child {
+            background-color: transparent;
+        }
+    }
 }
 .irs-from {
     display: none;
-}
-.irs--flat .irs-from, .irs--flat .irs-single, .irs--flat .irs-to {
-    display: none;
-}
-.irs--flat .irs-max, .irs--flat .irs-min {
-    top: 55px;
-    padding: 0;
-    padding-left: 27px;
-    color: $basic-text;
-    font-size: 14px;
-    line-height: 17px;
-    font-family: 'Barlow-Regular', 'Arial', sans-serif;
-    text-decoration-line: underline;
-    background-color: transparent;
-    border-radius: 0;
-    visibility: visible !important;
 }
 .irs-min::before, .irs-max::before {
     position: absolute;
@@ -139,24 +266,44 @@
 .irs-max::before {
     content: "до";
 }
-.irs--flat .irs-line {
-    top: 25px;
-    height: 1px;
-    background-color: $range;
-    border-radius: 0px;
-}
-.irs--flat .irs-bar {
-    top: 25px;
-    height: 3px;
-    background-color: $basic-blue;
-}
-.irs--flat .irs-handle {
-    top: 22px;
-    width: 8px;
-    height: 8px;
-    background-color: $basic-blue;
-    border-radius: 50%;
-}
-.irs--flat .irs-handle>i:first-child, .irs--flat .irs-handle.state_hover>i:first-child, .irs--flat .irs-handle:hover>i:first-child {
-    background-color: transparent;
+
+.btn-checked {
+    & .aside-filter__content {
+        flex-wrap: nowrap;
+        justify-content: space-between;
+    }
+    & .aside-filter__content-box {
+        width: auto;
+    }
+    & .aside-filter__content-label {
+        position: relative;
+        height: 25px;
+        width: 63px;
+        font-size: 12px;
+        line-height: 14px;
+        letter-spacing: 0.07em;
+        color: $light-text;
+    }
+    & .jq-checkbox {
+        background-color: $light;
+        height: 25px;
+        width: 63px;
+        border: none;
+        &.checked {
+            background-color: $basic-blue;
+            & ~ .btn-checked__text {
+                color: #fff;
+            }
+        }
+    }
+    & .jq-checkbox.checked .jq-checkbox__div {
+        display: none;
+    }
+    &__text {
+        position: absolute;
+        top: -7px;
+        left: 50%;
+        transform: translateX(-57%);
+        z-index: 5;
+    }
 }
