--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -14,6 +14,9 @@
         &.product-item__wrapper--list {
             width: 100%;
         }
+        &.product-item__wrapper--list {
+            width: 100%;
+        }
     }
     &__title {
         padding: 14px 0 25px;
@@ -57,6 +60,9 @@
         background-color: rgba(255, 255, 255, .9);
         box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
         border-radius: 3px;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 90%;
         opacity: 0;
         transition: all .3s;
     }
