--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -27,3 +27,4 @@
 @import "blocks/catalog.scss";
 @import "blocks/pagination.scss";
 @import "blocks/aside-filter.scss";
+@import "blocks/product-card.scss";
