--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -62,6 +62,9 @@
     }
     &__buttons {
         margin-bottom: 50px;
+        a + a {
+            margin-left: 30px;
+        }
     }
     &__icon-favorite {
     }
