Закончена страница с товаром

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -28,3 +28,4 @@
 @import "blocks/pagination.scss";
 @import "blocks/aside-filter.scss";
 @import "blocks/product-card.scss";
+@import "blocks/tabs.scss";
