--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -29,3 +29,4 @@
 @import "blocks/aside-filter.scss";
 @import "blocks/product-card.scss";
 @import "blocks/tabs.scss";
+@import "blocks/media.scss";
