--- a/source/sass/blocks/media.scss
+++ b/source/sass/blocks/media.scss
@@ -1,3 +1,17 @@
+@media (max-width: 1200px) {
+    .banner-section {
+        &__inner {
+            justify-content: space-around;
+        }
+        &__slider {
+            max-width: 600px;
+            &-img {
+                min-height: 380px;
+                max-width: 600px;
+            }
+        }
+    }
+}
 @media (max-width: 1100px) {
     .menu {
         &__item {
@@ -51,11 +65,48 @@
             display: none;
         }
     }
+    .banner-section {
+        &__inner {
+            margin-top: 25px;
+            justify-content: center;
+            flex-wrap: wrap;
+        }
+        &__slider {
+            max-width: 100%;
+            &-item {
+                text-align: center;
+            }
+            &-img {
+                max-width: 100%;
+                margin-bottom: 25px;
+            }
+        }
+    }
 }
 @media (max-width: 640px) {
     .header {
         &__address {
             display: none;
+        }
+    }
+    .banner-section {
+        & .container {
+            padding: 0;
+        }
+        &__slider {
+            &-img {
+                min-height: 200px;
+            }
+        }
+    }
+}
+@media (max-width: 440px) {
+    .banner-section {
+        &__slider {
+            &-img {
+                min-width: 320px;
+                min-height: 164px;
+            }
         }
     }
 }
