Поиск и блок с категориями

--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -33,7 +33,7 @@ body {
     font-size: 20px;
     line-height: 24px;
     color: $basic-text;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 .container {
     max-width: 1200px;
