--- a/source/sass/blocks/media.scss
+++ b/source/sass/blocks/media.scss
@@ -11,6 +11,11 @@
             }
         }
     }
+    .categories {
+        &__inner {
+            justify-content: space-around;
+        }
+    }
 }
 @media (max-width: 1100px) {
     .menu {
@@ -82,6 +87,12 @@
             }
         }
     }
+    .mobile-overflow {
+        width: 1000px;
+    }
+    .tabs-wrapper {
+        overflow-x: scroll;
+    }
 }
 @media (max-width: 640px) {
     .header {
@@ -99,6 +110,28 @@
             }
         }
     }
+    .search {
+        &__content-form {
+            position: relative;
+        }
+        &__content-btn {
+            position: absolute;
+            top: 13px;
+            right: 8px;
+            padding: 15px;
+            font-size: 0;
+            line-height: 0;
+            background-image: url("../../img/search-icon.svg");
+            width: 24px;
+            height: 24px;
+            background-color: transparent;
+            background-repeat: no-repeat;
+        }
+        &__content-input {
+            padding-right: 50px;
+            height: 50px;
+        }
+    }
 }
 @media (max-width: 440px) {
     .banner-section {
@@ -107,6 +140,11 @@
                 min-width: 320px;
                 min-height: 164px;
             }
+        }
+    }
+    .categories {
+        &__item {
+            padding: 20px 10px 16px;
         }
     }
 }
