--- a/source/sass/blocks/media.scss
+++ b/source/sass/blocks/media.scss
@@ -1,3 +1,10 @@
+@media (max-width: 1300px) {
+    .product {
+        &__more {
+            margin-top: 60px;
+        }
+    }
+}
 @media (max-width: 1200px) {
     .banner-section {
         &__inner {
