--- a/source/sass/blocks/media.scss
+++ b/source/sass/blocks/media.scss
@@ -23,6 +23,11 @@
             justify-content: space-around;
         }
     }
+    .banner {
+        &__link img {
+            width: 100%;
+        }
+    }
 }
 @media (max-width: 1100px) {
     .menu {
@@ -137,6 +142,12 @@
         &__content-input {
             padding-right: 50px;
             height: 50px;
+        }
+    }
+    .banner {
+        &__link img {
+            min-height: 90px;
+            object-fit: cover;
         }
     }
 }
