--- a/source/sass/blocks/media.scss
+++ b/source/sass/blocks/media.scss
@@ -4,6 +4,9 @@
             margin-top: 60px;
         }
     }
+    .product-slider__slider-btn {
+        display: none !important;
+    }
 }
 @media (max-width: 1200px) {
     .banner-section {
@@ -106,6 +109,19 @@
         overflow-x: scroll;
     }
 }
+@media (max-width: 940px) {
+    .footer {
+        &__top {
+            &-inner {
+                flex-wrap: wrap;
+                justify-content: space-around;
+            }
+            &-item {
+                margin-bottom: 25px;
+            }
+        }
+    }
+}
 @media (max-width: 640px) {
     .header {
         &__address {
@@ -148,6 +164,67 @@
         &__link img {
             min-height: 90px;
             object-fit: cover;
+        }
+    }
+}
+@media (max-width: 540px) {
+    .footer {
+        &__top {
+            &-inner {
+                justify-content: start;
+            }
+            &-item {
+                width: 100%;
+                border-bottom: 2px solid #fff;
+                &.footer__top-newsletter {
+                    margin-right: auto;
+                    margin-left: auto;
+                    width: 290px;
+                    text-align: center;
+                }
+                &.footer__top-social {
+                    width: 100%;
+                    border-bottom: none;
+                }
+            }
+            &-itemdrop {
+                margin-bottom: 0;
+                border-top: 2px solid #fff;
+            }
+            &-title.footer__topdrop {
+                padding: 15px 0;
+                font-size: 14px;
+                line-height: 18px;
+                color: $light-text;
+            }
+        }
+        &-list {
+            display: none;
+        }
+        &__bottom {
+            flex-direction: column;
+            align-items: flex-start;
+            &-link {
+                margin: 12px 0;
+            }
+        }
+    }
+    .social-list {
+        justify-content: center;
+    }
+    .footer__topdrop {
+        position: relative;
+        &::after {
+            position: absolute;
+            content: "";
+            background-image: url("../../img/arrow-down.svg");
+            top: 21px;
+            right: 0;
+            width: 12px;
+            height: 8px;
+        }
+        &--active::after {
+            transform: rotate(180deg);
         }
     }
 }
